# prime-sync-prototype

./: .gitignore  README.md  attendance.db  build.py  icon.icns  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
db/: database.py
logic/: attendance_logic.py  device_logic.py  settings_logic.py  user_logic.py
ui/: attendance_ui.py  dashboard_ui.py  developer_credits.py  device_ui.py  error_dialog.py  processing_dialog.py  settings_ui.py  user_ui.py
ui/components/: form_dialog.py  table_widget.py
utilities/: device_manager.py  logger.py  state_manager.py  system_tray.py
